dev/src/Parser/expr.output
Terminaux inutilisés dans la grammaire

   TK_LTH
   TK_GTH
   TK_LEQ
   TK_GEQ


État 5 conflits: 2 réduction/réduction


Grammaire

    0 $accept: input $end

    1 input: expression TK_ZERO

    2 args: term
    3     | args TK_COMMA term

    4 term: TK_VAR
    5     | TK_FUN TK_LPAREN args TK_RPAREN
    6     | TK_FUN

    7 expression: TK_VAR
    8           | TK_FUN TK_LPAREN expression TK_RPAREN
    9           | expression TK_COMMA expression
   10           | TK_LPAREN expression TK_RPAREN
   11           | term TK_EQUA term
   12           | term TK_NEQUA term
   13           | expression TK_EQU expression
   14           | expression TK_IMP expression
   15           | expression TK_XOR expression
   16           | expression TK_DIS expression
   17           | expression TK_CON expression
   18           | TK_ANT expression
   19           | TK_NEG expression


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
TK_DIS (258) 16
TK_CON (259) 17
TK_XOR (260) 15
TK_IMP (261) 14
TK_EQU (262) 13
TK_ANT (263) 18
TK_NEG (264) 19
TK_EQUA (265) 11
TK_NEQUA (266) 12
TK_LTH (267)
TK_GTH (268)
TK_LEQ (269)
TK_GEQ (270)
TK_LPAREN (271) 5 8 10
TK_RPAREN (272) 5 8 10
TK_COMMA (273) 3 9
TK_ZERO (274) 1
TK_FUN (275) 5 6 8
TK_VAR (276) 4 7


Non-terminaux, suivis des règles où ils apparaissent

$accept (22)
    à gauche: 0
input (23)
    à gauche: 1, à droite: 0
args (24)
    à gauche: 2 3, à droite: 3 5
term (25)
    à gauche: 4 5 6, à droite: 2 3 11 12
expression (26)
    à gauche: 7 8 9 10 11 12 13 14 15 16 17 18 19, à droite: 1 8
    9 10 13 14 15 16 17 18 19


État 0

    0 $accept: . input $end
    1 input: . expression TK_ZERO
    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    input       aller à l'état 6
    term        aller à l'état 7
    expression  aller à l'état 8


État 1

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   18           | TK_ANT . expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 9


État 2

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression
   19           | TK_NEG . expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 10


État 3

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   10           | TK_LPAREN . expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 11


État 4

    5 term: TK_FUN . TK_LPAREN args TK_RPAREN
    6     | TK_FUN .  [TK_EQUA, TK_NEQUA, TK_RPAREN, TK_COMMA]
    8 expression: TK_FUN . TK_LPAREN expression TK_RPAREN

    TK_LPAREN  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 6 (term)


État 5

    4 term: TK_VAR .  [TK_EQUA, TK_NEQUA, TK_RPAREN, TK_COMMA]
    7 expression: TK_VAR .  [TK_DIS, TK_CON, TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_COMMA, TK_ZERO]

    TK_EQUA    réduction par utilisation de la règle 4 (term)
    TK_NEQUA   réduction par utilisation de la règle 4 (term)
    TK_RPAREN  réduction par utilisation de la règle 4 (term)
    TK_RPAREN  [réduction par utilisation de la règle 7 (expression)]
    TK_COMMA   réduction par utilisation de la règle 4 (term)
    TK_COMMA   [réduction par utilisation de la règle 7 (expression)]
    $défaut   réduction par utilisation de la règle 7 (expression)


État 6

    0 $accept: input . $end

    $end  décalage et aller à l'état 13


État 7

   11 expression: term . TK_EQUA term
   12           | term . TK_NEQUA term

    TK_EQUA   décalage et aller à l'état 14
    TK_NEQUA  décalage et aller à l'état 15


État 8

    1 input: expression . TK_ZERO
    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression

    TK_DIS    décalage et aller à l'état 16
    TK_CON    décalage et aller à l'état 17
    TK_XOR    décalage et aller à l'état 18
    TK_IMP    décalage et aller à l'état 19
    TK_EQU    décalage et aller à l'état 20
    TK_COMMA  décalage et aller à l'état 21
    TK_ZERO   décalage et aller à l'état 22


État 9

    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression
   18           | TK_ANT expression .  [TK_DIS, TK_CON, TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_ZERO]

    TK_COMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 18 (expression)

    Conflit entre la règle 18 et le jeton TK_DIS résolu par réduction (TK_DIS < TK_ANT).
    Conflit entre la règle 18 et le jeton TK_CON résolu par réduction (TK_CON < TK_ANT).
    Conflit entre la règle 18 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_ANT).
    Conflit entre la règle 18 et le jeton TK_IMP résolu par réduction (TK_IMP < TK_ANT).
    Conflit entre la règle 18 et le jeton TK_EQU résolu par réduction (TK_EQU < TK_ANT).
    Conflit entre la règle 18 et le jeton TK_COMMA résolu par décalage (TK_ANT < TK_COMMA).


État 10

    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression
   19           | TK_NEG expression .  [TK_DIS, TK_CON, TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_ZERO]

    TK_COMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 19 (expression)

    Conflit entre la règle 19 et le jeton TK_DIS résolu par réduction (TK_DIS < TK_NEG).
    Conflit entre la règle 19 et le jeton TK_CON résolu par réduction (TK_CON < TK_NEG).
    Conflit entre la règle 19 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_NEG).
    Conflit entre la règle 19 et le jeton TK_IMP résolu par réduction (TK_IMP < TK_NEG).
    Conflit entre la règle 19 et le jeton TK_EQU résolu par réduction (TK_EQU < TK_NEG).
    Conflit entre la règle 19 et le jeton TK_COMMA résolu par décalage (TK_NEG < TK_COMMA).


État 11

    9 expression: expression . TK_COMMA expression
   10           | TK_LPAREN expression . TK_RPAREN
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression

    TK_DIS     décalage et aller à l'état 16
    TK_CON     décalage et aller à l'état 17
    TK_XOR     décalage et aller à l'état 18
    TK_IMP     décalage et aller à l'état 19
    TK_EQU     décalage et aller à l'état 20
    TK_RPAREN  décalage et aller à l'état 23
    TK_COMMA   décalage et aller à l'état 21


État 12

    2 args: . term
    3     | . args TK_COMMA term
    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    5     | TK_FUN TK_LPAREN . args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    8           | TK_FUN TK_LPAREN . expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    args        aller à l'état 24
    term        aller à l'état 25
    expression  aller à l'état 26


État 13

    0 $accept: input $end .

    $défaut  accepter


État 14

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
   11 expression: term TK_EQUA . term

    TK_FUN  décalage et aller à l'état 27
    TK_VAR  décalage et aller à l'état 28

    term  aller à l'état 29


État 15

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
   12 expression: term TK_NEQUA . term

    TK_FUN  décalage et aller à l'état 27
    TK_VAR  décalage et aller à l'état 28

    term  aller à l'état 30


État 16

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   16           | expression TK_DIS . expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 31


État 17

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   17           | expression TK_CON . expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 32


État 18

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   15           | expression TK_XOR . expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 33


État 19

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   14           | expression TK_IMP . expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 34


État 20

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   13           | expression TK_EQU . expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 35


État 21

    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN
    7 expression: . TK_VAR
    8           | . TK_FUN TK_LPAREN expression TK_RPAREN
    9           | . expression TK_COMMA expression
    9           | expression TK_COMMA . expression
   10           | . TK_LPAREN expression TK_RPAREN
   11           | . term TK_EQUA term
   12           | . term TK_NEQUA term
   13           | . expression TK_EQU expression
   14           | . expression TK_IMP expression
   15           | . expression TK_XOR expression
   16           | . expression TK_DIS expression
   17           | . expression TK_CON expression
   18           | . TK_ANT expression
   19           | . TK_NEG expression

    TK_ANT     décalage et aller à l'état 1
    TK_NEG     décalage et aller à l'état 2
    TK_LPAREN  décalage et aller à l'état 3
    TK_FUN     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5

    term        aller à l'état 7
    expression  aller à l'état 36


État 22

    1 input: expression TK_ZERO .

    $défaut  réduction par utilisation de la règle 1 (input)


État 23

   10 expression: TK_LPAREN expression TK_RPAREN .

    $défaut  réduction par utilisation de la règle 10 (expression)


État 24

    3 args: args . TK_COMMA term
    5 term: TK_FUN TK_LPAREN args . TK_RPAREN

    TK_RPAREN  décalage et aller à l'état 37
    TK_COMMA   décalage et aller à l'état 38


État 25

    2 args: term .  [TK_RPAREN, TK_COMMA]
   11 expression: term . TK_EQUA term
   12           | term . TK_NEQUA term

    TK_EQUA   décalage et aller à l'état 14
    TK_NEQUA  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 2 (args)


État 26

    8 expression: TK_FUN TK_LPAREN expression . TK_RPAREN
    9           | expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression

    TK_DIS     décalage et aller à l'état 16
    TK_CON     décalage et aller à l'état 17
    TK_XOR     décalage et aller à l'état 18
    TK_IMP     décalage et aller à l'état 19
    TK_EQU     décalage et aller à l'état 20
    TK_RPAREN  décalage et aller à l'état 39
    TK_COMMA   décalage et aller à l'état 21


État 27

    5 term: TK_FUN . TK_LPAREN args TK_RPAREN
    6     | TK_FUN .  [TK_DIS, TK_CON, TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_COMMA, TK_ZERO]

    TK_LPAREN  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 6 (term)


État 28

    4 term: TK_VAR .

    $défaut  réduction par utilisation de la règle 4 (term)


État 29

   11 expression: term TK_EQUA term .

    $défaut  réduction par utilisation de la règle 11 (expression)


État 30

   12 expression: term TK_NEQUA term .

    $défaut  réduction par utilisation de la règle 12 (expression)


État 31

    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   16           | expression TK_DIS expression .  [TK_DIS, TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_ZERO]
   17           | expression . TK_CON expression

    TK_CON    décalage et aller à l'état 17
    TK_COMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 16 (expression)

    Conflit entre la règle 16 et le jeton TK_DIS résolu par réduction (%left TK_DIS).
    Conflit entre la règle 16 et le jeton TK_CON résolu par décalage (TK_DIS < TK_CON).
    Conflit entre la règle 16 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_DIS).
    Conflit entre la règle 16 et le jeton TK_IMP résolu par réduction (TK_IMP < TK_DIS).
    Conflit entre la règle 16 et le jeton TK_EQU résolu par réduction (TK_EQU < TK_DIS).
    Conflit entre la règle 16 et le jeton TK_COMMA résolu par décalage (TK_DIS < TK_COMMA).


État 32

    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression
   17           | expression TK_CON expression .  [TK_DIS, TK_CON, TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_ZERO]

    TK_COMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 17 (expression)

    Conflit entre la règle 17 et le jeton TK_DIS résolu par réduction (TK_DIS < TK_CON).
    Conflit entre la règle 17 et le jeton TK_CON résolu par réduction (%left TK_CON).
    Conflit entre la règle 17 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_CON).
    Conflit entre la règle 17 et le jeton TK_IMP résolu par réduction (TK_IMP < TK_CON).
    Conflit entre la règle 17 et le jeton TK_EQU résolu par réduction (TK_EQU < TK_CON).
    Conflit entre la règle 17 et le jeton TK_COMMA résolu par décalage (TK_CON < TK_COMMA).


État 33

    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   15           | expression TK_XOR expression .  [TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_ZERO]
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression

    TK_DIS    décalage et aller à l'état 16
    TK_CON    décalage et aller à l'état 17
    TK_COMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 15 (expression)

    Conflit entre la règle 15 et le jeton TK_DIS résolu par décalage (TK_XOR < TK_DIS).
    Conflit entre la règle 15 et le jeton TK_CON résolu par décalage (TK_XOR < TK_CON).
    Conflit entre la règle 15 et le jeton TK_XOR résolu par réduction (%left TK_XOR).
    Conflit entre la règle 15 et le jeton TK_IMP résolu par réduction (TK_IMP < TK_XOR).
    Conflit entre la règle 15 et le jeton TK_EQU résolu par réduction (TK_EQU < TK_XOR).
    Conflit entre la règle 15 et le jeton TK_COMMA résolu par décalage (TK_XOR < TK_COMMA).


État 34

    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   14           | expression TK_IMP expression .  [TK_IMP, TK_EQU, TK_RPAREN, TK_ZERO]
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression

    TK_DIS    décalage et aller à l'état 16
    TK_CON    décalage et aller à l'état 17
    TK_XOR    décalage et aller à l'état 18
    TK_COMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 14 (expression)

    Conflit entre la règle 14 et le jeton TK_DIS résolu par décalage (TK_IMP < TK_DIS).
    Conflit entre la règle 14 et le jeton TK_CON résolu par décalage (TK_IMP < TK_CON).
    Conflit entre la règle 14 et le jeton TK_XOR résolu par décalage (TK_IMP < TK_XOR).
    Conflit entre la règle 14 et le jeton TK_IMP résolu par réduction (%left TK_IMP).
    Conflit entre la règle 14 et le jeton TK_EQU résolu par réduction (TK_EQU < TK_IMP).
    Conflit entre la règle 14 et le jeton TK_COMMA résolu par décalage (TK_IMP < TK_COMMA).


État 35

    9 expression: expression . TK_COMMA expression
   13           | expression . TK_EQU expression
   13           | expression TK_EQU expression .  [TK_EQU, TK_RPAREN, TK_ZERO]
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression

    TK_DIS    décalage et aller à l'état 16
    TK_CON    décalage et aller à l'état 17
    TK_XOR    décalage et aller à l'état 18
    TK_IMP    décalage et aller à l'état 19
    TK_COMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 13 (expression)

    Conflit entre la règle 13 et le jeton TK_DIS résolu par décalage (TK_EQU < TK_DIS).
    Conflit entre la règle 13 et le jeton TK_CON résolu par décalage (TK_EQU < TK_CON).
    Conflit entre la règle 13 et le jeton TK_XOR résolu par décalage (TK_EQU < TK_XOR).
    Conflit entre la règle 13 et le jeton TK_IMP résolu par décalage (TK_EQU < TK_IMP).
    Conflit entre la règle 13 et le jeton TK_EQU résolu par réduction (%left TK_EQU).
    Conflit entre la règle 13 et le jeton TK_COMMA résolu par décalage (TK_EQU < TK_COMMA).


État 36

    9 expression: expression . TK_COMMA expression
    9           | expression TK_COMMA expression .  [TK_DIS, TK_CON, TK_XOR, TK_IMP, TK_EQU, TK_RPAREN, TK_COMMA, TK_ZERO]
   13           | expression . TK_EQU expression
   14           | expression . TK_IMP expression
   15           | expression . TK_XOR expression
   16           | expression . TK_DIS expression
   17           | expression . TK_CON expression

    $défaut  réduction par utilisation de la règle 9 (expression)

    Conflit entre la règle 9 et le jeton TK_DIS résolu par réduction (TK_DIS < TK_COMMA).
    Conflit entre la règle 9 et le jeton TK_CON résolu par réduction (TK_CON < TK_COMMA).
    Conflit entre la règle 9 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_COMMA).
    Conflit entre la règle 9 et le jeton TK_IMP résolu par réduction (TK_IMP < TK_COMMA).
    Conflit entre la règle 9 et le jeton TK_EQU résolu par réduction (TK_EQU < TK_COMMA).
    Conflit entre la règle 9 et le jeton TK_COMMA résolu par réduction (%left TK_COMMA).


État 37

    5 term: TK_FUN TK_LPAREN args TK_RPAREN .

    $défaut  réduction par utilisation de la règle 5 (term)


État 38

    3 args: args TK_COMMA . term
    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    6     | . TK_FUN

    TK_FUN  décalage et aller à l'état 27
    TK_VAR  décalage et aller à l'état 28

    term  aller à l'état 41


État 39

    8 expression: TK_FUN TK_LPAREN expression TK_RPAREN .

    $défaut  réduction par utilisation de la règle 8 (expression)


État 40

    2 args: . term
    3     | . args TK_COMMA term
    4 term: . TK_VAR
    5     | . TK_FUN TK_LPAREN args TK_RPAREN
    5     | TK_FUN TK_LPAREN . args TK_RPAREN
    6     | . TK_FUN

    TK_FUN  décalage et aller à l'état 27
    TK_VAR  décalage et aller à l'état 28

    args  aller à l'état 24
    term  aller à l'état 42


État 41

    3 args: args TK_COMMA term .

    $défaut  réduction par utilisation de la règle 3 (args)


État 42

    2 args: term .

    $défaut  réduction par utilisation de la règle 2 (args)
